# rust_scratchpad

./: .gitignore  Cargo.toml  README.md
archive/: Cargo.toml
archive/src/: whereami.rs
dbtest/: Cargo.toml
dbtest/src/: bqtest.rs  copy_test.rs  mem_to_disk.rs  pgtest.rs
ep0/: Cargo.toml
ep0/src/: build_fq.rs  main.rs
etw_tests/: Cargo.toml
etw_tests/src/: etwwatch.rs  main.rs  main_rs.bkp  subdiag.rs  testlist.rs  testlist2.rs  wmicheck.rs
etw_tests/src/etwevents/: mod.rs  templates.rs
etw_tests/src/etwwatch/: README.md  etwwatch.rs
etw_tests/src/etwwatch/cache/: mod.rs  parser.rs
etw_tests/src/etwwatch/etwevents/: mod.rs  templates.rs
etw_tests/src/wels/: mod.rs
mpush/: Cargo.toml
mpush/src/: main.rs  mpushdev.rs  obsrawdump.rs  testparse.rs
nettest/: Cargo.toml
nettest/src/: main.rs
ow01/: Cargo.toml
ow01/src/: main.rs
proctest1/: Cargo.toml
proctest1/src/: listen.rs  listen2.rs  listen3.rs
proctests/: proctests.md
regtests/: Cargo.toml
regtests/src/: main.rs
ro1/: Cargo.toml  README.md
ro1/src/: cache.rs  main.rs  parser.rs  rtevents.rs  snapshot.rs  util.rs  wels.rs
ro1/src/rtevents/etwevents/: mod.rs  templates.rs
ro_test_nets/: Microsoft-Windows-TCPIP.manifest.xml  netstat_test.md  service_list.md  test_libsql_select.md
ro_test_nets/src/: main.rs  templates.rs
sqlitedump/: Cargo.toml  README.md
sqlitedump/config/: browser_tables.json  win_timeline.json
sqlitedump/src/: config_structs.rs  main.rs
src/: grab_obs.rs  whereami.rs
wintest/: Cargo.toml
wintest/src/: main.rs
