[package]
name = "robs6_etw"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
ferrisetw = { version="1.2.0", features=["time_rs"] }
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.143" 
time = "0.3.43"
windows = { version = "0.62.2", features = [ "Win32_System_EventLog", "Win32_Foundation"] }

[[bin]]
name = "testlist"
path ="src/testlist.rs"

