[package]
name = "robs6_etw"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
env_logger = "0.11.8"
ferrisetw = { version="1.2.0", features=["time_rs"] }
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.143" 
time = "0.3.43"
tokio = { version = "1.48.0", features = ["rt","macros","rt-multi-thread"]}
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_Threading"] }

[[bin]]
name = "testlist"
path ="src/testlist.rs"

[[bin]]
name = "testlist2"
path ="src/testlist2.rs"

[[bin]]
name = "subdiag"
path = "src/subdiag.rs"
