[package]
name = "mpush"
version = "0.1.0"
edition = "2024"

[dependencies]
argparse = "0.2.2"
libsql = "0.9.24"
libsql-client = "0.33.4"
meilisearch-sdk = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread"] }


[[bin]]
name = "mpush"
path ="src/main.rs"


[[bin]]
name = "mpushdev"
path ="src/mpushdev.rs"

[[bin]]
name = "rawdump"
path ="src/obsrawdump.rs"

[[bin]]
name = "test"
path ="src/testparse.rs"



[[bin]]
name = "gctest"
path ="src/gctest.rs"
