[package]
name = "robs"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_Threading"] }
ctrlc = "3.4.7"
as_bool = "0.1.3"
anyhow = "1.0.99" 

crossterm = "0.29.0"

wmi = "0.17.2"
serde = { version = "1.0", features = ["derive"] }

quick-xml-to-json = "0.1.0"
